[package]
name = "field-day-map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
quickxml_to_serde = "0.6.0"
reqwest = "0.12.4"
tokio = { version = "1.37.0", features = ["full"] }
